View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025012 | Community | OCCT:Shape Healing | public | 2014-06-16 18:25 | 2014-11-11 12:52 |
Reporter | drazmyslovich | Assigned To | apn | ||
Priority | normal | Severity | major | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2010 | ||
Product Version | 6.6.0 | ||||
Target Version | 6.8.0 | Fixed in Version | 6.8.0 | ||
Summary | 0025012: ShapeFix_Wire checks the wrong parameter for the curve during SameParameter check | ||||
Description | ShapeFix_Wire line 731: if( fabs(First-fp2d)>Precision::PConfusion() || fabs(Last-fp2d)>Precision::PConfusion() ) { Last should be compared with lp2d, but not fp2d | ||||
Tags | No tags attached. | ||||
Test case number | bugs vis(004) bug24714 | ||||
|
The fix is committed. Please, review it. |
|
No remarks, please test |
|
Dear BugMaster, Branch CR25012 (and products from GIT master) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 75a779424bc982d003f27d8562ba52f545d3b2c9 Number of compiler warnings: occt component : Linux: 16 (16 on master) Windows: 0 (0 on master) MacOS: 200 (203 on master) products component : Linux: 11 (11 on master) Windows: 2 (2 on master) Regressions/Differences: No regressions/differences Testing cases: Not needed Testing on Linux: Total MEMORY difference: 348832316 / 349066800 Total CPU difference: 51932.859999999964 / 52851.98000000001 Testing on Windows: Total MEMORY difference: 367692880 / 368324888 Total CPU difference: 37640.359375 / 42223.875 There are no differences in images found by testdiff. |
occt: master 44a87d69 2014-06-16 14:27:06 razmyslovich Committer: apn Details Diff |
0025012: ShapeFix_Wire checks the wrong parameter for the curve during SameParameter check SameParameter check is fixed to verify the correct pairs of parameters |
Affected Issues 0025012 |
|
mod - src/ShapeFix/ShapeFix_Wire.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-06-16 18:25 | drazmyslovich | New Issue | |
2014-06-16 18:25 | drazmyslovich | Assigned To | => drazmyslovich |
2014-06-16 18:28 | drazmyslovich | Note Added: 0029785 | |
2014-06-16 18:28 | drazmyslovich | Status | new => resolved |
2014-06-16 18:32 | abv | Note Added: 0029786 | |
2014-06-16 18:32 | abv | Assigned To | drazmyslovich => bugmaster |
2014-06-16 18:32 | abv | Status | resolved => reviewed |
2014-06-16 19:54 |
|
Assigned To | bugmaster => mkv |
2014-06-18 11:01 |
|
Note Added: 0029807 | |
2014-06-18 11:02 |
|
Test case number | => bugs vis(004) bug24714 |
2014-06-18 11:02 |
|
Assigned To | mkv => bugmaster |
2014-06-18 11:02 |
|
Status | reviewed => tested |
2014-06-19 12:57 | apn | Target Version | Unscheduled => 6.8.0 |
2014-06-20 12:54 | apn | Changeset attached | => occt master 44a87d69 |
2014-06-20 12:54 | apn | Assigned To | bugmaster => apn |
2014-06-20 12:54 | apn | Status | tested => verified |
2014-06-20 12:54 | apn | Resolution | open => fixed |
2014-11-11 12:46 |
|
Fixed in Version | => 6.8.0 |
2014-11-11 12:52 |
|
Status | verified => closed |