0025012: ShapeFix_Wire checks the wrong parameter for the curve during SameParameter check

SameParameter check is fixed to verify the correct pairs of parameters